2013-02-28  Adhemerval Zanella  <azanella@linux.vnet.ibm.com> 

	[BZ #15055] 
	* sysdeps/ieee754/ldbl-128ibm/e_acoshl.c (__ieee754_acoshl): Use 
	__ieee754_sqrl instead of __sqrl. 

2013-01-18  Anton Blanchard  <anton@samba.org>
	    Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/init-first.c: Rename
	__kernel_vdso_get_tbfreq to __kernel_get_tbfreq.
	* sysdeps/unix/sysv/linux/powerpc/get_clockfreq.c: Add parameter to
	INTERNAL_VSYSCALL_NO_SYSCALL_FALLBACK to specify return type.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep.h
	(INTERNAL_VSYSCALL_NCS): Change "=&r" in inline asm output regs list to
	"+r" and remove output regs list as redundant.  Add explicit inline
	asm to specify register of return val to work around compiler codegen
	bug.  Remove (int) cast on return value.  Add return type parameter to
	use in macro so that this macro does not truncate return value for
	64-bit values.
	(INTERNAL_VSYSCALL_NO_SYSCALL_FALLBACK): Add return type parameter and
	pass to INTERNAL_VSYSCALL_NCS.
	(INLINE_VSYSCALL): Add 'long int' as return type to
	INTERNAL_VSYSCALL_NCS macro invocation.
	(INTERNAL_VSYSCALL): Add 'long int' as return type to
	INTERNAL_VSYSCALL_NCS macro invocation.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/sysdep.h: Likewise.

2013-01-09  Anton Blanchard  <anton@samba.org>

	* sysdeps/unix/sysv/linux/powerpc/sched_getcpu.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/Versions: Add __vdso_getcpu.
	* sysdeps/unix/sysv/linux/powerpc/bits/libc-vdso.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/init-first.c: Likewise.

2013-02-08  Carlos O'Donell  <carlos@redhat.com>

	[BZ #15006]
	* sysdeps/generic/ldconfig.h: Define FLAG_ARM_LIBSF.
	* elf/cache.c (print_entry): Add FLAG_ARM_LIBSF support.

2013-03-30  David S. Miller  <davem@davemloft.net>

	* po/de.po: Update from translation team.

2013-01-31  David S. Miller  <davem@davemloft.net>

	* po/de.po: Update from translation team.
