@@ -1,0 +1,2 @@
+powerpc/power4/fpu
+powerpc/power4
